@@ -1,3 +1,12 @@
+2024-03-03T08:18:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8128874657 # 169
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-03
+* notice: last 14d: unq all: 2 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 775 1233
+* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 776 1234
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-03-03]
+
 2024-03-03T01:06:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8126701314 # 168
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-03
